Fix CircleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
    build:
      docker:
-       - image: circleci/clojure:lein
+       - image: circleci/clojure:lein-browsers
      steps:
        - checkout
-       - run: lein test
+       - run: lein doo once
